<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".erankyun_sinus">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:text="@string/erankyun_sinus_1"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_55sdp"
        android:text="@string/erankyun_sinus_2"
        android:textAlignment="center"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_170sdp"
        android:text="@string/erankyun_sinus_3"
        android:textSize="@dimen/_15sdp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_230sdp"
        android:text="@string/erankyun_sinus_4"
        android:textColor="@color/blue"
        android:textSize="@dimen/_17sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_250sdp"
        android:text="@string/erankyun_sinus_5"
        android:textSize="@dimen/_17sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erankyun_sinus_6"
            android:textColor="@color/blue"
            android:layout_marginTop="@dimen/_275sdp"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.64" />




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_140sdp"
        android:layout_marginTop="@dimen/_320sdp"
        android:background="@drawable/gazanik"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879">

        <TextView
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:text="@string/erankyun_sinus_7"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/patasxan_sinus"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/edit_text_rounder_corner"
                android:backgroundTint="@color/blue"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/white" />


            <ImageView
                android:id="@+id/microfon"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_35sdp"
                android:onClick="Click"
                app:srcCompat="@drawable/miqrafon_off" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>