<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".erankyun_makeres_act">

    <TextView
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/erankyun_makeres_1"
        android:textSize="@dimen/_17sdp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_75sdp"
        android:text="@string/erankyun_makeres_2"
        android:textAlignment="center"
        android:textSize="@dimen/_17sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_140sdp"
        android:text="@string/erankyun_makeres_3"
        android:textSize="@dimen/_19sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_245sdp"
        android:text="@string/erankyun_makeres_4"
        android:textColor="@color/blue"
        android:textSize="@dimen/_22sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_170sdp"
        android:text="@string/erankyun_makeres_5"
        android:textColor="@color/blue"
        android:textSize="@dimen/_17sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_200sdp"
        android:text="@string/erankyun_makeres_6"
        android:textColor="@color/blue"
        android:textSize="@dimen/_17sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="@dimen/_148sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginTop="@dimen/_230sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/erankyun_makeres_ha" />










    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_140sdp"
        android:layout_marginTop="@dimen/_320sdp"
        android:background="@drawable/gazanik"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879">

        <TextView
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:text="@string/erankyun_makeres_7"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/patasxan_erankyun_makeres"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/edit_text_rounder_corner"
                android:backgroundTint="@color/blue"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/white" />


            <ImageView
                android:id="@+id/microfon"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_35sdp"
                android:onClick="Click"
                app:srcCompat="@drawable/miqrafon_off" />
        </LinearLayout>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>