<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".erankyun_cos">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/erankyun_cos_1"
        android:textColor="@color/blue"
        android:textSize="@dimen/_19sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
            android:text="@string/erankyun_cos_2"
            android:textSize="@dimen/_15sdp"
        android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_55sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.636"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.152" />


        <TextView
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:text="@string/erankyun_cos_3"
            android:textColor="@color/blue"
            android:textSize="@dimen/_15sdp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_125sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.636"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.393" />


        <TextView
            android:layout_width="@dimen/_280sdp"
            android:layout_height="wrap_content"
            android:text="@string/erankyun_cos_4"
            android:textAlignment="center"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_165sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.619"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="@dimen/_280sdp"
            android:layout_height="wrap_content"
            android:text="@string/erankyun_cos_5"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_190sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.636"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.601" />

        <TextView
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:text="@string/erankyun_cos_6"
            android:textColor="@color/blue"
            android:textSize="@dimen/_20sdp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_260sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.636"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.768" />




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_140sdp"
        android:layout_marginTop="@dimen/_320sdp"
        android:background="@drawable/gazanik"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879">

        <TextView
            android:layout_width="@dimen/_260sdp"
            android:layout_height="wrap_content"
            android:text="@string/erankyun_cos_7"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/eranakyun_cos_"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_35sdp"
                android:textSize="@dimen/_25sdp"
                android:background="@drawable/edit_text_rounder_corner"
                android:backgroundTint="@color/blue"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/white" />


            <ImageView
                android:id="@+id/microfon"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_35sdp"
                android:onClick="Click"
                app:srcCompat="@drawable/miqrafon_off" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>